Bump net.sourceforge.pmd:pmd-java from 7.24.0 to 7.25.0 (#3197)
* Bump net.sourceforge.pmd:pmd-java from 7.24.0 to 7.25.0

Bumps [net.sourceforge.pmd:pmd-java](https://github.com/pmd/pmd) from 7.24.0 to 7.25.0.
- [Release notes](https://github.com/pmd/pmd/releases)
- [Commits](https://github.com/pmd/pmd/compare/pmd_releases/7.24.0...pmd_releases/7.25.0)

---
updated-dependencies:
- dependency-name: net.sourceforge.pmd:pmd-java
  dependency-version: 7.25.0
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* Fix PMD violations

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Andriy Redko <drreta@gmail.com>
(cherry picked from commit a6d8bd3cb10586741cb19b357a82af4f6f88390d)

# Conflicts:
#	systests/rs-sse/rs-sse-base/src/main/java/org/apache/cxf/systest/jaxrs/sse/BookStore.java
#	systests/rs-sse/rs-sse-base/src/main/java/org/apache/cxf/systest/jaxrs/sse/BookStore2.java
#	systests/spring-boot/src/test/java/org/apache/cxf/systest/jaxrs/spring/boot/SpringJaxrsObservabilityTest.java
#	systests/spring-boot/src/test/java/org/apache/cxf/systest/jaxrs/spring/boot/SpringJaxrsWebObservabilityTest.java
#	systests/spring-boot/src/test/java/org/apache/cxf/systest/jaxws/spring/boot/SpringJaxwsObservabilityTest.java
#	systests/transport-hc5/src/test/java/org/apache/cxf/systest/hc5/jaxrs/BookServerAsyncClient.java